# INFO-H502

./: CMakeLists.txt  External-stbImage.cmake  README.md
Include/: Mesh.hpp  Model.hpp  Shader.hpp  shadow.hpp  skybox.hpp  thruster_particles.hpp  weather_particles.h
Resources/model/satellite/: Satellite.mtl
Sources/: Shader.cpp  main.cpp  shadow.cpp  skybox.cpp  thruster_particles.cpp  weather_particles.cpp
Sources/Shaders/: cubemapShader.vert  dephtSimple.frag  dephtSimple.vert  particles_athmo.frag  particles_athmo.geom  particles_athmo.vert  particules_thruster.frag  particules_thruster.vert  satellite.frag  satellite.vert  shaderTex.frag  shaderTex.vert  simpleShader.frag  simpleShader.vert
